--- a/app/src/main/res/layout/fragment_customer_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_customer_bottom_sheet.xml
@@ -57,6 +57,7 @@
             <ImageView
                 android:layout_width="34dp"
                 android:layout_weight="1"
+                android:id="@+id/addCustomer"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginEnd="@dimen/_10dp"
