--- a/app/src/main/res/layout/fragment_customer_receive_credit_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_customer_receive_credit_bottom_sheet.xml
@@ -101,6 +101,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="number"
+                    android:imeOptions="actionDone"
                     android:hint="Received Amount" />
             </com.google.android.material.textfield.TextInputLayout>
             <androidx.constraintlayout.widget.ConstraintLayout
