--- a/app/src/main/res/layout/item_invoice_details_bill.xml
+++ b/app/src/main/res/layout/item_invoice_details_bill.xml
@@ -50,7 +50,7 @@
                 android:layout_marginTop="@dimen/_5dp"
                 app:layout_constraintStart_toEndOf="@+id/quantity"
                 app:layout_constraintTop_toTopOf="parent"
-                android:text='@{(item.itemName.split(" ")[0])}'
+                android:text='@{(item.itemName.split("\\(")[0])}'
                 android:textStyle="bold"
                 tools:text="Itemmmm"/>
 
