--- a/app/src/main/res/layout/item_invoice_item.xml
+++ b/app/src/main/res/layout/item_invoice_item.xml
@@ -45,7 +45,7 @@
                     android:layout_marginTop="@dimen/_10dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:text='@{(item.itemName.split(" ")[0])}'
+                    android:text='@{(item.itemName.split("\\(")[0])}'
                     android:textStyle="bold"
                     tools:text="Itemmmm"/>
 
