--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -21,6 +21,7 @@
     <dimen name="_30dp">30dp</dimen>
     <dimen name="_40dp">40dp</dimen>
     <dimen name="_50dp">50dp</dimen>
+    <dimen name="_70dp">70dp</dimen>
     <dimen name="_15dp">15dp</dimen>
     <dimen name="_18dp">18dp</dimen>
     <dimen name="_dialog_corners">5dp</dimen>
