--- a/app/src/main/res/layout/fragment_sale_return.xml
+++ b/app/src/main/res/layout/fragment_sale_return.xml
@@ -415,7 +415,7 @@
                         android:textStyle="bold"
                         android:gravity="center"
                         android:textSize="20sp"
-                        android:textColor="@color/white"
+                        android:textColor="@color/text_color_heading_reverse"
                         tools:text="REFUND"/>
                     <ProgressBar
                         android:id="@+id/progressBar"
