--- a/app/src/main/res/drawable/rectangle_outline_view.xml
+++ b/app/src/main/res/drawable/rectangle_outline_view.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/white" />
+    <solid android:color="@color/text_color_heading_reverse" />
     <corners android:radius="4dp" />
     <stroke
         android:width="1dp"
