--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,7 +17,7 @@
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
-        android:background="@color/white"
+        android:background="@color/text_color_heading_reverse"
         tools:context=".ui.login.LoginActivity">
 
         <TextView android:fontFamily="@font/montserrat_regular"
@@ -134,7 +134,7 @@
                         android:textStyle="bold"
                         android:gravity="center"
                         android:textSize="@dimen/txt_16sp"
-                        android:textColor="@color/white" />
+                        android:textColor="@color/text_color_heading_reverse" />
 
                 </androidx.cardview.widget.CardView>
 
@@ -231,7 +231,7 @@
                         android:textStyle="bold"
                         android:gravity="center"
                         android:textSize="@dimen/txt_16sp"
-                        android:textColor="@color/white" />
+                        android:textColor="@color/text_color_heading_reverse" />
 
                 </androidx.cardview.widget.CardView>
 
