--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/text_color_heading_reverse"
     android:orientation="vertical"
     android:gravity="center"
     android:theme="@style/ThemeOverlay.BillKit.FullscreenContainer"
