--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -67,7 +67,7 @@
                         android:textStyle="bold"
                         android:gravity="center"
                         android:textSize="@dimen/txt_12sp"
-                        android:textColor="@color/white"/>
+                        android:textColor="@color/text_color_heading_reverse"/>
 
                 </androidx.cardview.widget.CardView>
 
