--- a/app/src/main/res/layout/fragment_customer_details.xml
+++ b/app/src/main/res/layout/fragment_customer_details.xml
@@ -217,7 +217,7 @@
                                     android:padding="@dimen/_10dp"
                                     android:gravity="center"
                                     android:textSize="@dimen/txt_14sp"
-                                    android:textColor="@color/white"/>
+                                    android:textColor="@color/text_color_heading_reverse"/>
 
                             </androidx.cardview.widget.CardView>
                             <androidx.cardview.widget.CardView
@@ -244,7 +244,7 @@
                                     android:padding="@dimen/_10dp"
                                     android:gravity="center"
                                     android:textSize="@dimen/txt_14sp"
-                                    android:textColor="@color/white"/>
+                                    android:textColor="@color/text_color_heading_reverse"/>
 
                             </androidx.cardview.widget.CardView>
 
