--- a/app/src/main/res/layout/fragment_edit_bill_details.xml
+++ b/app/src/main/res/layout/fragment_edit_bill_details.xml
@@ -53,7 +53,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    android:background="@color/text_color_heading_reverse">
 
       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
