--- a/app/src/main/res/layout/fragment_edit_product.xml
+++ b/app/src/main/res/layout/fragment_edit_product.xml
@@ -120,7 +120,7 @@
                             android:padding="@dimen/_10dp"
                             android:gravity="center"
                             android:textSize="20sp"
-                            android:textColor="@color/white"/>
+                            android:textColor="@color/text_color_heading_reverse"/>
 
                     </androidx.cardview.widget.CardView>
 
@@ -449,7 +449,7 @@
                     android:textStyle="bold"
                     android:gravity="center"
                     android:textSize="20sp"
-                    android:textColor="@color/white"/>
+                    android:textColor="@color/text_color_heading_reverse"/>
 
             </androidx.cardview.widget.CardView>
 
