--- a/app/src/main/res/layout/fragment_printer_settings.xml
+++ b/app/src/main/res/layout/fragment_printer_settings.xml
@@ -23,7 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="16dp"
-        android:background="@color/white">
+        android:background="@color/text_color_heading_reverse">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -355,7 +355,7 @@
                     android:textStyle="bold"
                     android:gravity="center"
                     android:textSize="20sp"
-                    android:textColor="@color/white"/>
+                    android:textColor="@color/text_color_heading_reverse"/>
                 <ProgressBar
                     android:id="@+id/progressBar"
                     android:layout_width="match_parent"
