--- a/app/src/main/res/layout/fragment_product.xml
+++ b/app/src/main/res/layout/fragment_product.xml
@@ -32,7 +32,7 @@
                 android:padding="@dimen/_15dp"
                 android:gravity="center"
                 android:textSize="@dimen/txt_14sp"
-                android:textColor="@color/white"/>
+                android:textColor="@color/text_color_heading_reverse"/>
 
         </androidx.cardview.widget.CardView>
 
