--- a/app/src/main/res/layout/fragment_quick_sale.xml
+++ b/app/src/main/res/layout/fragment_quick_sale.xml
@@ -12,7 +12,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
+        android:background="@color/text_color_heading_reverse"
         android:orientation="vertical">
 
 
@@ -366,7 +366,7 @@
                                         android:gravity="center"
                                         
                                         android:textSize="@dimen/txt_16sp"
-                                        android:textColor="@color/white"
+                                        android:textColor="@color/text_color_heading_reverse"
                                         bind:neumorph_backgroundColor="@color/colorPrimaryDark"/>
 
                                 </androidx.cardview.widget.CardView>
