--- a/app/src/main/res/layout/fragment_split.xml
+++ b/app/src/main/res/layout/fragment_split.xml
@@ -145,7 +145,7 @@
                     android:textStyle="bold"
                     android:gravity="center"
                     android:textSize="@dimen/txt_16sp"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/text_color_heading_reverse" />
 
             </androidx.cardview.widget.CardView>
 
