--- a/app/src/main/res/layout/fragment_tab_pdf.xml
+++ b/app/src/main/res/layout/fragment_tab_pdf.xml
@@ -100,7 +100,7 @@
                                             android:textStyle="bold"
                                             android:layout_weight="1"
                                             android:paddingStart="@dimen/_10dp"
-                                            android:textColor="@color/white"
+                                            android:textColor="@color/text_color_heading_reverse"
                                             android:background="@{selectedColor}"
                                             android:text="SL No"/>
                                         <TextView
@@ -110,7 +110,7 @@
                                             android:textStyle="bold"
                                             android:layout_weight="1"
                                             android:paddingStart="@dimen/_10dp"
-                                            android:textColor="@color/white"
+                                            android:textColor="@color/text_color_heading_reverse"
                                             android:background="@{selectedColor}"
                                             android:text="ITEM"/>
                                         <TextView
@@ -120,7 +120,7 @@
                                             android:textStyle="bold"
                                             android:layout_weight="1"
                                             android:gravity="end"
-                                            android:textColor="@color/white"
+                                            android:textColor="@color/text_color_heading_reverse"
                                             android:background="@{selectedColor}"
                                             android:text="QTY"/>
                                         <TextView
@@ -130,7 +130,7 @@
                                             android:textStyle="bold"
                                             android:layout_weight="1"
                                             android:gravity="center"
-                                            android:textColor="@color/white"
+                                            android:textColor="@color/text_color_heading_reverse"
                                             android:background="@{selectedColor}"
                                             android:text="PRICE"/>
                                         <TextView
@@ -141,7 +141,7 @@
                                             android:layout_weight="1"
                                             android:gravity="end"
                                             android:paddingEnd="@dimen/_10dp"
-                                            android:textColor="@color/white"
+                                            android:textColor="@color/text_color_heading_reverse"
                                             android:background="@{selectedColor}"
                                             android:text="TAX"/>
                                         <TextView
@@ -152,7 +152,7 @@
                                             android:layout_weight="1"
                                             android:gravity="end"
                                             android:paddingEnd="@dimen/_10dp"
-                                            android:textColor="@color/white"
+                                            android:textColor="@color/text_color_heading_reverse"
                                             android:background="@{selectedColor}"
                                             android:text="AMOUNT"/>
 
@@ -185,7 +185,7 @@
                                             android:layout_weight="1"
                                             android:layout_marginEnd="10dp"
                                             android:paddingStart="@dimen/_10dp"
-                                            android:textColor="@color/white"
+                                            android:textColor="@color/text_color_heading_reverse"
                                             android:background="@{selectedColor}"
                                             android:text="SL No"/>
 
@@ -196,7 +196,7 @@
                                             android:textStyle="bold"
                                             android:layout_weight="1"
                                             android:layout_marginStart="-10dp"
-                                            android:textColor="@color/white"
+                                            android:textColor="@color/text_color_heading_reverse"
                                             android:background="@{selectedColor}"
 
                                             android:text="TAX TYPE"/>
@@ -206,7 +206,7 @@
                                             android:textSize="@dimen/txt_8sp"
                                             android:textStyle="bold"
                                             android:layout_weight="1"
-                                            android:textColor="@color/white"
+                                            android:textColor="@color/text_color_heading_reverse"
                                             android:background="@{selectedColor}"
 
                                             android:text="TAXABLE AMT"/>
@@ -218,7 +218,7 @@
                                             android:layout_weight="1"
                                             android:gravity="center"
                                             android:paddingEnd="@dimen/_10dp"
-                                            android:textColor="@color/white"
+                                            android:textColor="@color/text_color_heading_reverse"
                                             android:background="@{selectedColor}"
 
                                             android:text="RATE"/>
@@ -230,7 +230,7 @@
                                             android:layout_weight="1"
                                             android:gravity="end"
                                             android:paddingEnd="@dimen/_10dp"
-                                            android:textColor="@color/white"
+                                            android:textColor="@color/text_color_heading_reverse"
                                             android:background="@{selectedColor}"
 
                                             android:text="TAX AMT"/>
@@ -510,7 +510,7 @@
                     android:textStyle="bold"
                     android:gravity="center"
                     android:textSize="20sp"
-                    android:textColor="@color/white"/>
+                    android:textColor="@color/text_color_heading_reverse"/>
                 <ProgressBar
                     android:id="@+id/progressBar"
                     android:layout_width="match_parent"
