--- a/app/src/main/res/layout/fragment_tax_for_quick_sell.xml
+++ b/app/src/main/res/layout/fragment_tax_for_quick_sell.xml
@@ -69,7 +69,7 @@
                 android:textStyle="bold"
                 android:gravity="center"
                 android:textSize="20sp"
-                android:textColor="@color/white"/>
+                android:textColor="@color/text_color_heading_reverse"/>
 
         </androidx.cardview.widget.CardView>
 
